fix: Remove junit4
Fixes: #3127
Also fixed deprecated JDK API usage