@@ -15,14 +15,14 @@
  */
 package io.atlasmap.java.inspect;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import io.atlasmap.core.DefaultAtlasConversionService;
 import io.atlasmap.java.test.CachedComplexClass;
@@ -37,13 +37,13 @@ public class CachedComplexClassInspectClassTest {
 
     private ClassInspectionService classInspectionService = null;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         classInspectionService = new ClassInspectionService();
         classInspectionService.setConversionService(DefaultAtlasConversionService.getInstance());
     }
 
-    @After
+    @AfterEach
     public void tearDown() {
         classInspectionService = null;
     }
@@ -70,7 +70,7 @@ public class CachedComplexClassInspectClassTest {
                 c.getUri());
         assertNull(c.getValue());
 
-        assertEquals(new Integer(3), new Integer(c.getJavaFields().getJavaField().size()));
+        assertEquals(Integer.valueOf(3), Integer.valueOf(c.getJavaFields().getJavaField().size()));
 
         Integer validated = 0;
         for (JavaField f : c.getJavaFields().getJavaField()) {
@@ -96,7 +96,7 @@ public class CachedComplexClassInspectClassTest {
             }
         }
 
-        assertEquals(validated, new Integer(c.getJavaFields().getJavaField().size()));
+        assertEquals(validated, Integer.valueOf(c.getJavaFields().getJavaField().size()));
     }
 
 }
